--- a/index.Rmd
+++ b/index.Rmd
@@ -1,93 +1,10 @@
 ---
-title: "Course Syllabus"
-output:
-  html_document:
-    toc: true
-    toc_float: true
-    number_sections: true
+title: "EMSE 6574: Programming for Analytics"
+output: html_document
 ---
 
-```{r setup, include=FALSE}
-library(knitr)
-library(here)
-library(kableExtra)
+# Fall 2019
 
-knitr::opts_chunk$set(echo = TRUE)
-options(knitr.kable.NA = '')
-```
+Welcome to EMSE 6574: Programming for Analytics. This is a separate section from the graduate-level section. In this section, we will be using the [R computing language](https://www.r-project.org/) to learn how to read, write, and debug code and produce comprehendable and reproducible analyses. 
 
-# Course Information
-
-|  |  |
-|---------------------|--------------------------------------------------|
-| Name:&emsp;         | EMSE 6574: Programming for Analytics, Section 10 |
-| Semester:&emsp;     | Fall 2019                                        |
-| Meeting Time:&emsp; | TBD                                              |
-| Location:&emsp;     | TBD                                              |
-
-<vspace:10pt>
-
-# Instructor Information
-
-|  |  |
-|-----------------------|-----------------------------------------|
-| Name:&emsp;           | John Paul Helveston                     |
-| Campus Address:&emsp; | Science & Engineering Hall, Office 2830 |
-| Campus Phone:&emsp;   | +1 (202) 994-7173                       |
-| Email:&emsp;          | jph@gwu.edu                             |
-| Office Hours:&emsp;   | TBD                                     |
-
-<vspace:10pt>
-
-# Course Description
-
-## GW Bulletin Description
-
-Introduction to programming for data analytics using the [R computing language](https://www.r-project.org/); topics include R, RMarkdown, functions, conditionals, loops, strings, file input/output, data visualization, coding style, efficiency, Monte Carlo methods, webscraping data, and package development.
-
-## Detailed Description
-
-This course provides students with a foundation in programming for data analytics using the [R computing language](https://www.r-project.org/). Emphasis will be on learning how to read, write, and debug code to produce analyses that are easy to understand and fully reproducible. Throughout the course, students will primarily work on individual programming assignments to help practice coding skills. Students will be assessed through quizzes, exams, and a final project. Teaching will involve interactive lectures and recitations with lots of live coding. At the end of the semester, students will demonstrate mastery of the course's topics by working on a 3-week term project. This course will prepare students for higher level courses in data analytics.
-
-## Prerequisites 
-
-There are no prerequisites, and no prior programming experience is necessary to succeed in this class.
-
-# Learning objectives
-
-Having successfully completed this course, students will be able to:
-
-- Conduct a systematic exploratory data analysis (EDA) of different types of data.
-- Understand fundamental principles of visualizing information for exploratory analysis and communication.
-- Organize projects and manage version controlling with Git and GitHub
-- [Wrangle data](https://r4ds.had.co.nz/wrangle-intro.html) from its original format into a fit-for-purpose format.
-- Get data off the web and expose data, code, results on the web.
-- Generate fully reproducible reports that contain contain code, equations, visualizations, and narrative text.
-
-# Texts / References
-
-All textbooks and references are available for free on the web, though physical copies can be purchased if desired:
-
-- Data Wrangling in R:
-    - Wickham, Hadley. "R for Data Science"
-    [[free online](https://r4ds.had.co.nz/)],
-    [[buy on amazon](https://www.amazon.com/Data-Science-Transform-Visualize-Model/dp/1491910399)]
-- Data Visualization:
-    - Healy, Kieran. "Data Visualization: A practical introduction"
-    [[free online](http://socviz.co/)],
-    [[buy on amazon](https://www.amazon.com/Data-Visualization-Introduction-Kieran-Healy/dp/0691181624)]
-    - Wilke, Claus O. "Fundamentals of Data Visualization"
-    [[free online](https://serialmentor.com/dataviz/)],
-    [[buy on amazon](https://www.amazon.com/Fundamentals-Data-Visualization-Informative-Compelling/dp/1492031089)]
-- Handy R [cheatsheets](https://www.rstudio.com/resources/cheatsheets/):
-    - [RMarkdown](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf)
-    - [Data wrangling with the `dplyr` library](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf)
-    - [Data visualization with the `ggplot2` library](https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf)
-
-# Schedule
-
-```{r echo=FALSE}
-read.csv(here::here('schedule.csv'), header=T) %>% 
-    kable(format = 'html', escape = FALSE) %>% 
-    kable_styling(bootstrap_options = c('striped', 'hover'), full_width = F)
-```
+Click on the [Syllabus](syllabus.html) page for details about the class requirements, learning objectives, and schedule. 
