--- a/resources.Rmd
+++ b/resources.Rmd
@@ -24,7 +24,7 @@ options(knitr.kable.NA = '')
 [[free online](https://serialmentor.com/dataviz/)],
 [[buy on amazon](https://www.amazon.com/Fundamentals-Data-Visualization-Informative-Compelling/dp/1492031089)]
 - [ggThemeAssist](https://github.com/calligross/ggthemeassist): Package for customizing plotting themes
-    
+
 ## RStudio [cheatsheets](https://www.rstudio.com/resources/cheatsheets/):
 - [RMarkdown](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf)
 - [Data wrangling with the `dplyr` library](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf)
@@ -35,12 +35,14 @@ options(knitr.kable.NA = '')
 - [Markdown It](https://markdown-it.github.io): Quickly demo Markdown code.
 - [RMarkdown guide](http://www.stat.cmu.edu/~cshalizi/rmarkdown/)
 
-# Finding Datasets
+# Datasets
 - [Kaggle](https://www.kaggle.com/datasets)
 - [Google Dataset Search](https://toolbox.google.com/datasetsearch)
 - [Tableau Community Forumss](https://community.tableau.com/docs/DOC-10635)
+- [More datasets for teaching data science: The expanded `dslabs` package](https://simplystatistics.org/2019/07/19/more-datasets-for-teaching-data-science-the-expanded-dslabs-package/), by Amy Gill
 
 # Helpful Tutorials
+- [RStudio Primers](https://rstudio.cloud/learn/primers)
 - [Tidyverse in R](https://www.datacamp.com/community/tutorials/tidyverse-tutorial-r)
 - [Transitioning from Excel to R](https://trendct.org/2015/06/12/r-for-beginners-how-to-transition-from-excel-to-r/)
 
