--- a/schedule-content.Rmd
+++ b/schedule-content.Rmd
@@ -1,7 +1,9 @@
-library(kableExtra)
+# Schedule
+
+```{r}
 library(here)
-schedule <- read.csv(here::here('schedule.csv'), header = T) 
-# Define the start and end dates for class day 1 and 2 
+schedule <- read.csv(here::here('schedule.csv'), header = T)
+# Define the start and end dates for class day 1 and 2
 # (e.g. 1 is tues., 2 is thurs.)
 start1 <- as.Date("2019/08/27")
 end1   <- as.Date("2019/12/10")
@@ -13,3 +15,4 @@ date   <- sort(c(date1, date2))
 # Make the schedule data frame
 schedule$Date <- format(date, format="%m/%d")
 schedule <- schedule[c('Week', 'Meeting', 'Date', 'Topics', 'Due')]
+```
