--- a/index.Rmd
+++ b/index.Rmd
@@ -1,8 +1,5 @@
 ---
-title: |
-  | Course Syllabus:
-  | EMSE 6574 - Programming for Analytics
-  | Fall 2019
+title: "Syllabus"
 output: html_document
 ---
 
