--- a/syllabus-content.Rmd
+++ b/syllabus-content.Rmd
@@ -1,3 +1,8 @@
+## EMSE 6574: Programming for Analytics
+## Fall 2019
+
+<vspace:10pt>
+
 # Course Information
 
 |  |  |
@@ -6,8 +11,6 @@
 | Semester:&emsp;     | Fall 2019                                        |
 | Meeting Time:&emsp; | TBD                                              |
 | Location:&emsp;     | TBD                                              |
-
-<vspace:10pt>
 
 # Instructor Information
 
@@ -19,8 +22,6 @@
 | Email:&emsp;          | jph@gwu.edu                             |
 | Office Hours:&emsp;   | TBD                                     |
 
-<vspace:10pt>
-
 # Course Description
 
 ## Official GW Bulletin Description
@@ -29,7 +30,7 @@ Introduction to programming for data analytics using the [R computing language](
 
 ## Unofficial Description
 
-This course provides students with a foundation in programming for data analytics using the [R computing language](https://www.r-project.org/). Emphasis will be on learning how to read, write, test, and debug code to produce comprehensible and reproducible analyses. Throughout the course, students will primarily work on individual programming assignments to help practice coding skills. Students will be assessed through quizzes, exams, and a final project. Teaching will involve interactive lectures and recitations with a lot time spent [live coding](*what is live coding*). At the end of the semester, students will demonstrate mastery of the course's topics by working on a 3-week term project. This course will prepare students for higher level courses in data analytics.
+This course provides students with a foundation in programming for data analytics using the [R computing language](https://www.r-project.org/). Emphasis will be on learning how to read, write, test, and debug code to produce comprehensible and reproducible analyses. Throughout the course, students will primarily work on individual programming assignments to help practice coding skills. Students will be assessed through quizzes, exams, and a final project. Teaching will involve interactive lectures and recitations with a lot time spent [live coding](https://dl.acm.org/citation.cfm?id=2445388). At the end of the semester, students will demonstrate mastery of the course's topics by working on a 3-week term project. This course will prepare students for higher level courses in data analytics.
 
 ## Prerequisites
 
