--- a/syllabus-content.Rmd
+++ b/syllabus-content.Rmd
@@ -61,3 +61,14 @@ All textbooks and references are available for free on the web, though physical 
     - [RMarkdown](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf)
     - [Data wrangling with the `dplyr` library](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf)
     - [Data visualization with the `ggplot2` library](https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf)
+
+# Getting Help
+
+- [**Piazza**](piazza.com/gwu/fall2019/emse6574): Piazza can be used to ask quick questions and receive quick responses without attending office hours in person. This also enables other students to see answers to common questions. Questions on Piazza should be specific and include all needed information. For example, if your code has an error you don't understand, **include the code and the error message** in your question.
+- **Office Hours**: Office hours let you ask questions to TAs and professors directly, and can help you understand concepts and debug programs that you're struggling with alone.
+
+# Software
+
+Every required software package we use is available for free on the web. This includes:
+- R (version x.x or later), which can be freely downloaded from [The Comprehensive R Archive Network (CRAN)]((https://cloud.r-project.org))
+- RStudio, a free IDE for R, which can be freely downloaded from [RStudio](https://www.rstudio.com/products/rstudio/download/preview/)
