--- a/schedule-content.Rmd
+++ b/schedule-content.Rmd
@@ -5,25 +5,19 @@ library(here)
 library(kableExtra)
 options(knitr.kable.NA = '')
 schedule <- read_csv(here::here('schedule.csv'))
-# Define the start and end dates for class day 1 and 2
-# (e.g. 1 is Monday, 2 is Wednesday)
-start1 <- as.Date("2019/08/26")
-end1   <- as.Date("2019/12/02")
-start2 <- as.Date("2019/08/28")
-end2   <- as.Date("2019/12/04")
-# Set date for reading day and first day of finals 
-reading <- as.Date("2019/12/09")
-finals  <- as.Date("2019/12/12")
+# Define the first and last of class and finals start date
+start  <- as.Date("2019/08/28")
+end    <- as.Date("2019/12/04")
+makeup <- as.Date("2019/12/11")
+finals <- as.Date("2019/12/12")
 # Format the dates
-date1 <- format(seq(start1, end1, by = "week"), format="%m/%d")
-date2 <- format(seq(start2, end2, by = "week"), format="%m/%d")
-dates <- paste(date1, date2, sep=' &<br>')
-dates <- c(dates, format(c(reading, finals), format="%m/%d"))
+dates <- format(seq(start, end, by = "week"), format="%m/%d")
+dates <- c(dates, format(c(makeup, finals), format="%m/%d"))
 # Make the schedule data frame
-schedule$Dates <- dates
-# Define the week 
-schedule$Week <- seq(1:length(dates))
-schedule <- schedule[c('Week', 'Dates', 'Event/Topics', 'Quizzes/Homeworks/Practice')]
+schedule$Date <- dates
+# Define the week
+schedule$Week <- c(seq(1:(length(dates)-1)), (length(dates)-1))
+schedule <- schedule[c('Week', 'Date', 'Event/Topics', 'Quizzes/Homeworks/Practice')]
 # Render the schedule as markdown
 kable(schedule, format='markdown')
 ```
